# Imgine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README  build.bat  configure.bat  gitCommands.txt  main.cpp  run.bat
include/: GLM.h  imgine_app.h  imgine_assetloader.h  imgine_assimp.h  imgine_define.h  imgine_flecs.h  imgine_glfw.h  imgine_glm.h  imgine_imgui.h  imgine_imguiglfwvulkancontext.h  imgine_inttypes.h  imgine_jobsystem.h  imgine_mesh.h  imgine_scene.h  imgine_stb.h  imgine_vulkan.h  imgine_vulkanbuffer.h  imgine_vulkancommandbuffer.h  imgine_vulkancommons.h  imgine_vulkandescriptorsets.h  imgine_vulkanfence.h  imgine_vulkanhelpers.h  imgine_vulkanimage.h  imgine_vulkaninstancebind.h  imgine_vulkanmemoryallocator.h  imgine_vulkanpipeline.h  imgine_vulkanrenderpass.h  imgine_vulkanressources.h  imgine_vulkansemaphore.h  imgine_vulkanswapchain.h  imgine_window.h
shaders/: shader_base.frag
src/: imgine_app.cpp  imgine_assetloader.cpp  imgine_assimp.cpp  imgine_glfw.cpp  imgine_glm.cpp  imgine_mesh.cpp  imgine_scene.cpp  imgine_stb.cpp  imgine_vulkan.cpp  imgine_vulkanbuffer.cpp  imgine_vulkancommandbuffer.cpp  imgine_vulkandescriptorsets.cpp  imgine_vulkanfence.cpp  imgine_vulkanhelpers.cpp  imgine_vulkanimage.cpp  imgine_vulkanmemoryallocator.cpp  imgine_vulkanpipeline.cpp  imgine_vulkanrenderpass.cpp  imgine_vulkanressources.cpp  imgine_vulkansemaphore.cpp  imgine_vulkanswapchain.cpp  imgine_window.cpp  main.cpp
src/tests/: imgine_jobysystem_test.cpp
